k8s/prod/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mini-ing
  labels:
    name: mini-ing
  # annotations:
  #   kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: ministake2.thinkland.de   # TODO
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: ministake2
            port: 
              number: 8080
